Fixed issue on mobile with auto height

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -228,7 +228,7 @@ body {
 .grid__full {
   -webkit-box-flex: 1;
   flex: 1;
-  height: 100%;
+  height: auto;
   -webkit-box-align: stretch;
   align-items: stretch;
   padding: 5em 0; }
