--- a/resources/assets/sass/_globals.scss
+++ b/resources/assets/sass/_globals.scss
@@ -195,7 +195,7 @@ body {
 
 .grid__full {
   flex: 1;
-  height: 100%;
+  height: auto;
   align-items: stretch;
   padding: 5em 0;
 
